--- a/CarRental/src/main/resources/templates/lichsuthue.html
+++ b/CarRental/src/main/resources/templates/lichsuthue.html
@@ -124,6 +124,20 @@
 
     </div>
 </div>
+<div id="rental-modal" class="rental-modal">
+    <div class="modal-overlay"></div>
+    <div class="modal-content">
+        <button class="modal-close" type="button" aria-label="Đóng">&times;</button>
+        <div class="modal-header">
+            <div>
+                <p class="modal-subtitle">Chi tiết chuyến thuê</p>
+                <h3 class="modal-title" id="modal-title">Chuyến thuê</h3>
+            </div>
+            <div class="modal-badges" id="modal-badges"></div>
+        </div>
+        <div id="modal-body"></div>
+    </div>
+</div>
 <script src="/js/user-menu.js"></script>
 <script src="/js/station-search.js"></script>
 <script src="/js/lichsuthue.js"></script>
