--- a/CarRental/src/main/resources/templates/admin-stations.html
+++ b/CarRental/src/main/resources/templates/admin-stations.html
@@ -43,6 +43,10 @@
                     <tr>
                         <th>Station ID</th>
                         <th>Tên cơ sở</th>
+                        <th style="text-align: center; color: #27ae60;">Sẵn sàng</th>
+                        <th style="text-align: center; color: #f39c12;">Đang thuê</th>
+                        <th style="text-align: center; color: #e74c3c;">Bảo trì</th>
+
                         <th>Địa chỉ (Tọa độ)</th>
                         <th>Hành động</th>
                     </tr>
