--- a/CarRental/src/main/resources/templates/fragments/admin-nav.html
+++ b/CarRental/src/main/resources/templates/fragments/admin-nav.html
@@ -17,6 +17,9 @@
         <li><a th:href="@{/admin/history}"
                th:class="${activePage == 'history'} ? 'active'">Lịch sử thuê</a></li>
 
+        <li><a th:href="@{/admin/vehicle-reports}"
+               th:class="${activePage == 'vehicle-reports'} ? 'active'">Tình trạng xe</a></li>
+
         <li><a th:href="@{/admin/customers}"
                th:class="${activePage == 'customers'} ? 'active'">Khách hàng</a></li>
 
